# svd3x3

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  bench.cpp  pyproject.toml  svd3.h  svd3.hpp
src/: svd3.cpp  svd3.h  svd3.hpp
src/svd3x3/: __init__.py
svd3x3/: __init__.py  _bench.py  svd3.cpp
tests/: conftest.py  test_kabsch.py  test_mat.py  test_svd.py
