[project]
name = "svd3x3"
version = "0.1.0"
description = "Fast SVD for 3x3 matrices."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "cffi"]

[build-system]
requires = ["setuptools", "wheel", "cffi"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
py_limited_api = "cp32"

[tool.setuptools]
packages= ["svd3x3"]

[tool.setuptools.package-data]
svd3x3 = [".h"]


