[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project] # ===============================
name = "svd3x3"
version = "0.1.0"
description = "Fast SVD for 3x3 matrices."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
 "numpy",
 "nanobind>=2.8.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.136.6",
    "pytest>=8.4.1",
    "rowan>=1.3.2",
]


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
